--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@types/jest": "^29.5.12",
+    "firebase": "^10.8.1",
     "framer-motion": "^11.0.5",
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.0",
